Add authentication & multi-tenancy infrastructure (Phase 1 & 2)
Implement magic-link auth with Postmark email, session management,
household/user models, auth middleware, rate limiting, and route
protection. Existing stores continue working via household_id DEFAULT 1.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - gamwich-data:/data
     environment:
       GAMWICH_DB_PATH: /data/gamwich.db
+      GAMWICH_POSTMARK_TOKEN: ${GAMWICH_POSTMARK_TOKEN:-}
+      GAMWICH_FROM_EMAIL: ${GAMWICH_FROM_EMAIL:-}
+      GAMWICH_BASE_URL: ${GAMWICH_BASE_URL:-}
     restart: unless-stopped
 
 volumes:
