Fix CI to avoid redundant builds on tag push
- Add concurrency group per SHA to deploy.yml so simultaneous
  main + tag pushes only run one build instead of two
- Always tag Docker image as latest (not just on branch pushes)
  so the surviving tag-triggered run produces all needed tags
- Remove tags trigger from billing workflow since GitHub ignores
  path filters for tag events, causing spurious billing builds

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
     tags: ["v*"]
 
+concurrency:
+  group: deploy-${{ github.sha }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -35,7 +39,7 @@ jobs:
         with:
           images: dukerupert/gamwich
           tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest
             type=sha,prefix=
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
